[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/UI/sword_slot.png" type="Texture" id=1]
[ext_resource path="res://Popups/Addons/EquipSlot.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/selector.png" type="Texture" id=3]

[sub_resource type="StyleBoxTexture" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 46, 46 )
margin_left = 6.0
margin_right = 6.0
margin_top = 6.0
margin_bottom = 6.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxEmpty" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxTexture" id=10]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 52, 52 )
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 4.0
expand_margin_right = 2.0
expand_margin_top = 7.0
expand_margin_bottom = 0.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="StyleBoxEmpty" id=11]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=12]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin_left = 7.0
content_margin_right = -1.0
content_margin_top = 7.0
content_margin_bottom = -1.0

[node name="EquipDisplay" type="PanelContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 46.0
margin_bottom = 46.0
rect_min_size = Vector2( 46, 46 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 8 )
script = ExtResource( 2 )
_sections_unfolded = [ "custom_styles" ]

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 6.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = -15
custom_constants/margin_top = -6
custom_constants/margin_left = -9
custom_constants/margin_bottom = -15
_sections_unfolded = [ "custom_constants" ]

[node name="ItemList" type="ItemList" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -9.0
margin_top = -6.0
margin_right = 49.0
margin_bottom = 49.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/cursor = SubResource( 9 )
custom_styles/selected_focus = SubResource( 10 )
custom_styles/bg_focus = SubResource( 11 )
custom_styles/cursor_unfocused = SubResource( 12 )
custom_styles/selected = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
custom_colors/guide_color = Color( 0, 0, 0, 0 )
custom_constants/vseparation = 7
custom_constants/hseparation = 7
items = [  ]
select_mode = 0
allow_reselect = false
max_columns = 6
icon_mode = 0
fixed_icon_size = Vector2( 0, 0 )

[connection signal="item_activated" from="MarginContainer/ItemList" to="." method="_on_item_activated"]

[connection signal="item_selected" from="MarginContainer/ItemList" to="." method="_on_item_selected"]

[connection signal="nothing_selected" from="MarginContainer/ItemList" to="." method="_on_nothing_selected"]


